[tool.poetry]
name = "meetup-token-manager"
version = "0.1.0"
description = "Manages access tokens for the Meetup API."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
repository = "https://github.com/janjagusch/meetup-token-manager"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.3"
requests = "^2.22"

[tool.poetry.dev-dependencies]
black = {version="19.10b0", allow-prereleases=true}
codecov = "^2.0"
ipykernel = "^5"
pylint = "^2"
pytest = "^5"
pytest-cov = "^2.8"
pytest-vcr = "^1.0"
python-dotenv = "^0.10.3"
tox = "^3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
