[tool.poetry]
name = "meetup-token-manager"
version = "0.2.0"
description = "Easily obtain and cache OAuth 2.0 token from the Meetup API."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
repository = "https://github.com/janjagusch/meetup-token-manager"
license = "MIT"
packages = [
	{include = "meetup"}
]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.3"
requests = "^2.22"
object-storage = "^0.14.2"
google-cloud-storage = "^1.31.0"
pylint = "^2.6.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
black = {version="19.10b0", allow-prereleases=true}
python-dotenv = "^0.10.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
